<resources>
    <string name="app_name">MyUserStory</string>

    <string name="invalid_email">Email is not valid</string>
    <string name="email_hint">Enter your Email...</string>
    <string name="too_short">Password is too short</string>
    <string name="must_fill">Filed must be filled</string>
    <string name="logo_description">Application Logo</string>
    <string name="tagline_description">Application Tagline</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="register">Register</string>
    <string name="guest">as Guest</string>
    <string name="message_login_page">Please Input Your Data!</string>
    <string name="login_success_message">Login Success</string>
    <string name="login_failed_message">Login Failed, Please Try Again</string>
    <string name="register_success_message">Register Success</string>
    <string name="register_failed_message">Register Failed, Please Try Again</string>
    <string name="alert_message">Are You Sure?</string>
    <string name="post_success_message">Story Post Success</string>
    <string name="post_failed_message">Story Post Failed, Please Try Again</string>
    <string name="null_photo_message">You must upload a photo</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="welcome">Welcome, </string>
    <string name="not_account">---------------You Don\'t Have Account?---------------</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="avatar_user">Avatar User</string>
    <string name="description_story">Description Story</string>
    <string name="home">Home</string>
    <string name="not_login_message">You are not logged in,so you can\'t upload stories.</string>
    <string name="setting">Setting</string>
    <string name="photo_story">Photo Story</string>
    <string name="description_story_hint">What\'s on your mind?</string>
    <string name="post">Post</string>
    <string name="create_post">Create Post</string>
    <string name="upload_image_from_gallery">Upload Image From Gallery</string>
    <string name="take_a_photo">Take a Photo</string>
    <string name="retry">Retry</string>
    <string name="timeout">Timeout</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="user">User</string>
    <string name="permisssion_is_no_granted">Sorry, permission not granted</string>
    <string name="gps_permission">Please enable your location permission</string>
</resources>