<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.story.StoryActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            style="@style/toolbar"
            app:titleTextAppearance="@style/content_font_small"
            app:title="@string/create_post"
            android:backgroundTint="@color/light_blue_600"
            app:titleTextColor="@color/light_blue_50"
            app:navigationIconTint="@color/light_blue_50">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_submit"
                style="@style/button_navi"
                android:layout_width="wrap_content"
                android:paddingHorizontal="5dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:layout_marginEnd="15dp"
                android:minWidth="60dp"
                android:minHeight="40dp"
                android:text="@string/post"
                android:layout_gravity="end"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </com.google.android.material.appbar.MaterialToolbar>

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black_300"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical">

                </LinearLayout>
                <EditText
                    android:id="@+id/et_description"
                    style="@style/content_font_small"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="20dp"
                    android:background="@null"
                    android:hint="@string/description_story_hint"
                    android:inputType="textMultiLine" />

                <ImageView
                    android:id="@+id/preview"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginTop="25dp"
                    android:visibility="gone"/>
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_camera"
                    style="@style/button_white"
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="5dp"
                    android:drawableStart="@drawable/ic_baseline_camera_alt_24"
                    android:drawableTint="@color/teal_700"
                    android:drawablePadding="10dp"
                    android:minWidth="60dp"
                    android:minHeight="40dp"
                    android:text="@string/take_a_photo"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_gallery"
                    style="@style/button_white"
                    android:layout_marginTop="0dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="0dp"
                    android:paddingVertical="5dp"
                    android:drawableStart="@drawable/ic_gallery"
                    android:drawableTint="@color/navi_600"
                    android:drawablePadding="10dp"
                    android:minWidth="60dp"
                    android:minHeight="40dp"
                    android:text="@string/upload_image_from_gallery"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </LinearLayout>

            <ProgressBar
                android:id="@+id/progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:visibility="gone"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>