<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/layout"
    tools:context=".ui.main.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:liftOnScroll="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:backgroundTint="@color/light_blue_600"
            app:titleTextColor="@color/light_blue_50"
            app:navigationIconTint="@color/light_blue_50"
            style="@style/toolbar"
            app:title="@string/home"
            app:titleTextAppearance="@style/header_font_bold"
            app:menu="@menu/topbar_main" />

        <LinearLayout
            android:id="@+id/for_user"
            style="@style/toolbar"
            android:layout_width="match_parent"
            android:layout_height="35dp">

            <TextView
                android:id="@+id/tv_welcome"
                style="@style/header_font"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            style="@style/toolbar"
            android:backgroundTint="@color/light_blue_50"
            android:id="@+id/for_guest"
            android:layout_width="match_parent"
            android:layout_height="60dp">

            <TextView
                style="@style/content_font_small"
                android:layout_width="wrap_content"
                android:maxWidth="300dp"
                android:layout_height="wrap_content"
                android:text="@string/not_login_message"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="15dp"/>

            <TextView
                android:id="@+id/link_login"
                style="@style/content_font_medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textColor="@color/navi_900"
                android:layout_marginEnd="15dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvStory"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:listitem="@layout/item_story" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_location"
        app:tint="@android:color/white"
        android:src="@drawable/ic_baseline_location_on_24"
        app:maxImageSize="30dp"
        android:backgroundTint="@color/red_600"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="85dp"
        android:visibility="gone"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_add"
        app:tint="@android:color/white"
        android:src="@drawable/ic_add"
        app:maxImageSize="30dp"
        android:backgroundTint="@color/light_blue_900"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_margin="16dp"
        android:visibility="gone"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>